# dj-mvp

./: .gitignore  makefile  manage.py  pyproject.toml  readme.md
conf/: settings.py  urls.py
core/admin/: user_admin.py
core/forms/: __init__.py  signup_form.py  user_update_form.py
core/migrations/: 0001_initial.py
core/models/: user.py
core/views/: __init__.py  home_view.py  profile_update_view.py  profile_view.py  signup_view.py
static/: styles.css
templates/: home_page.html  login_page.html  password_change_done_page.html  password_change_page.html  profile_page.html  profile_update_page.html  signup_page.html
templates/layouts/: portal.html  root.html
