[project]
name = "dj-mvp"
version = "0.1.0"
description = "mvp starter with templates and best practices — start building quickly."
readme = "readme.md"
requires-python = ">=3.14"
dependencies = ["django>=6.0.6"]

[dependency-groups]
dev = [
  "django-stubs>=6.0.6",
  "django-stubs-ext>=6.0.6",
  "pyright>=1.1.411",
  "ruff>=0.15.20",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportIncompatibleVariableOverride = false

[tool.ruff]
line-length = 90
cache-dir = ".cache/ruff"
fix = true
extend-exclude = ["**/migrations/**"]

[tool.jinja-lsp]
templates = "./tmpl"
